--- a/styles.css
+++ b/styles.css
@@ -44,3 +44,10 @@ video {
   height:auto; 
   margin: 0 0 1em 0;
 }
+
+img {  
+  width:100%; 
+  max-width:500px; 
+  height:auto; 
+  margin: 0 0 1em 0;
+}
